feat(buffer-crypto): typed backend resolution + tpm2-pkcs11 JVM hardware key provider (#317)
* feat(buffer-crypto): typed backend resolution + tpm2-pkcs11 JVM hardware key provider

Closes the Linux/JVM half of #313 and replaces the overloaded-null capability
seam with a fully typed one:

- New public commonMain surface: ProtectedKeyBackend (closed sealed set),
  ProtectedKeyResolution (Available / Refused(finding) / None — three states
  that were previously conflated onto null), CapabilityFinding (per-backend
  sealed hierarchies), and Ckr/CkrClass (PKCS#11 return codes as a value class
  with a classified, explicitly-open tail — never a bare integer, never a
  message to parse). Routing stays on the frozen witnesses, which derive from
  the resolution unchanged; the new accessor is diagnostics/telemetry surface.
- The internal expect seam is now platformProtectedKeyResolution(); all five
  platform actuals return typed states (Android: Keystore.ProviderMissing on
  host-JVM; Apple: Enclave.NotPresent vs Enclave.ProbeFailed; web:
  Web.SubtleCryptoUnavailable; native Linux: None).
- jvmMain: Tpm2Pkcs11HardwareKeyProvider — TPM 2.0 via tpm2-pkcs11 through
  SunPKCS11. Resolution is probed end-to-end (module, login, generate → sign →
  software-verify) before Available is ever reported; configuration via system
  properties / env (module path, user PIN, slot index). ECDSA P-256 signing is
  the proven baseline; ECDH P-256 is probed lazily (tpm2-pkcs11 1.9 lacks
  CKM_ECDH1_DERIVE, so it honestly refuses and routes to the software floor —
  lights up automatically when the module gains the mechanism); AES-GCM not
  offered. dedicatedSecureElement=false (PKCS#11 cannot confirm a discrete
  element — never over-claims).
- New CI workflow crypto-tpm-integration.yaml: swtpm + tpm2-abrmd + initialized
  tpm2-pkcs11 token on ubuntu-24.04, running the REQUIRED-mode tests — full
  deterministic coverage with no physical hardware.

Verified locally against a live swtpm rig (W